# admonitions

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
docs/: README.md
gtmm_admonitions/: admonition.py
src/admonitions/: admonition.py
tests/: test_admonition.py
